--- a/프로그래머스/lv3/이하은/네트워크.md
+++ b/프로그래머스/lv3/이하은/네트워크.md
@@ -1,3 +1,6 @@
+## DFS/BFS
+
+```cpp
 #include <iostream>
 #include <string> 
 #include <cstring>
@@ -69,3 +72,63 @@ int solution(int n, vector<vector<int>> computers) {
     
     return cnt;
 }
+```
+
+## Union-Find
+
+```cpp
+#include <iostream>
+#include <string> 
+#include <cstring>
+#include <sstream>
+#include <algorithm>
+#include <vector>
+#include <cmath>
+#include <stack>
+#include <queue>
+#include <map>
+#include <set>
+#include <unordered_set>
+#include <unordered_map>
+using namespace std;
+typedef long long ll;
+typedef pair<int, int> pii;
+
+const int MAX = 201;
+int parent[MAX];
+
+int findParent(int x){
+    if(x == parent[x]) return x;
+    return parent[x] = findParent(parent[x]);
+}
+
+void unionParent(int x, int y){
+    x = findParent(x);
+    y = findParent(y);
+    parent[y] = x;
+}
+
+int solution(int n, vector<vector<int>> com) {
+    // 부모 노드 번호 초기화 
+    for(int i = 0; i < n; i++){
+        parent[i] = i;
+    }
+    
+    // 유니온 연산 
+    for(int i = 0; i < n; i++){
+        for(int j = 0; j < n; j++){
+            if(com[i][j] == 1){
+                unionParent(i, j);
+            }
+        }
+    }
+    
+    int cnt = 0;
+    for(int i = 0; i < n; i++){
+        // 루트 노드 개수 구하기
+        if(parent[i] == i) cnt++;
+    }
+    
+    return cnt;
+}
+```
