[fix] 오답 코드 수정

--- a/프로그래머스/lv1/이하은/덧칠하기.md
+++ b/프로그래머스/lv1/이하은/덧칠하기.md
@@ -1,3 +1,6 @@
+## 백트래킹 (오답)
+
+```kotlin 
 class Solution {
     val MAX = 100001
     var N = 0
@@ -54,3 +57,32 @@ class Solution {
         }
     }
 }
+```
+
+## 그리디
+
+롤러가 벽의 크기를 벗어나면 안 된다는 조건과 다르게.. 크기를 벗어나는 풀이로 작성해도 정답이 나온다. 😇
+
+n개의 칸을 전부 탐색하지 않고, **section 배열의 원소만 순회하면서 그리디하게** 풀어도 최적해가 보장되는 문제였다.
+
+앞으로도 완탐으로 풀기 전에! **좀더 단순하게, 직관적인 풀이로도 해결되는지 우선적으로 확인**해야겠다!
+
+앞선 풀이에서는 모든 경우의 수를 다 따지려고 백트래킹을 이용했는데, 재귀호출에서 뭔가 잘못되었는지 계속 오답이 나왔다ㅠ
+
+```kotlin
+class Solution {
+    fun solution(n: Int, m: Int, section: IntArray): Int {
+        var answer = 0
+        var nextIdx = 0
+        
+        section.forEach {        
+            if (it >= nextIdx) {
+                answer++
+                nextIdx = it + m
+            }
+        }
+        
+        return answer
+    }
+}
+```
