[add] takewhile 풀이 추가

--- a/프로그래머스/lv2/이하은/귤 고르기.md
+++ b/프로그래머스/lv2/이하은/귤 고르기.md
@@ -1,3 +1,6 @@
+## HashSet
+
+```kotlin
 import java.util.*
 
 /**
@@ -41,3 +44,40 @@ class Solution {
         return hashSet.size
     }
 }
+```
+
+## takeWhile
+
+```kotlin
+import java.util.*
+
+class Solution {
+    fun solution(k: Int, tangerine: IntArray): Int {
+        var answer = 0
+        val hashMap = hashMapOf<Int, Int>() // 종류, 개수 
+        
+        for(tan in tangerine){
+            hashMap[tan] = (hashMap[tan] ?: 0) + 1
+        }
+        
+        // 개수가 많은 순으로 정렬
+        val sortedTans = hashMap.values.sortedDescending()
+        
+        // 앞에서부터 k개 선택 
+        var takenCnt = 0
+        sortedTans.takeWhile {
+            takenCnt += it
+            answer++
+            takenCnt < k
+        }
+
+        return answer
+    }
+}
+```
+
+## groupBy 
+
+```kotlin 
+
+```
