[add] groupBy 풀이 추가

--- a/프로그래머스/lv2/이하은/귤 고르기.md
+++ b/프로그래머스/lv2/이하은/귤 고르기.md
@@ -66,8 +66,8 @@ class Solution {
         // 앞에서부터 k개 선택 
         var takenCnt = 0
         sortedTans.takeWhile {
-            takenCnt += it
-            answer++
+            takenCnt += it // 종류별 개수 더하기 
+            answer++ // 종류만 카운팅! 
             takenCnt < k
         }
 
@@ -79,5 +79,34 @@ class Solution {
 ## groupBy 
 
 ```kotlin 
+import java.util.*
 
+/**
+groupBy -> Map<K, List<T>> 리턴 
+Map.toList() ->  List<Pair<K, V>> 리턴 
+*/
+class Solution {
+    fun solution(k: Int, tangerine: IntArray): Int {
+        var answer = 0
+        
+        // 귤의 종류에 따라 그룹화 
+        val groupPair = tangerine.groupBy { it }.toList()
+        
+        // 종류별 개수가 많은 순으로 정렬 (내림차순)
+        val sortedPair = groupPair.sortedByDescending { it.second.size }
+            
+        // 앞에서부터 k개 선택 
+        var takenCnt = 0
+        sortedPair.forEach {
+            if(takenCnt >= k){
+                return answer
+            }
+            
+            takenCnt += it.second.size
+            answer++
+        }
+
+        return answer
+    }
+}
 ```
