[refactor] 시간복잡도 개선

--- a/프로그래머스/lv2/이하은/연속 부분 수열 합의 개수.md
+++ b/프로그래머스/lv2/이하은/연속 부분 수열 합의 개수.md
@@ -1,3 +1,6 @@
+## 슬라이딩 윈도우 - O(N^3)
+
+```kotlin
 import java.util.*
 
 /**
@@ -52,3 +55,36 @@ class Solution {
         return hashSet.size
     }
 }
+```
+
+## 이중 반복문 - O(N^2)
+
+```kotlin 
+import java.util.*
+
+/**
+0 n   -> 길이 1 2 ... n
+1 n+1 -> 길이 1 2 ... n
+2 n+2 -> 길이 1 2 ... n
+...
+n 2n  -> 길이 1 2 ... n
+*/
+class Solution {
+    fun solution(arr: IntArray): Int {
+        val hashSet = HashSet<Int>()
+        val n = arr.size
+         
+        for(i in 0 until n){ // 길이 N 
+            var sum = 0
+            for(j in i until n + i){ // 길이 N 
+                sum += arr[j % n]
+
+                // 부분 수열 길이가 하나씩 늘어날 때마다 set에 넣는 게 핵심! 
+                hashSet.add(sum) 
+            }
+        }
+        
+        return hashSet.size
+    }
+}
+```
