[add] substring 방법 추가

--- a/프로그래머스/lv2/이하은/괄호 회전하기.md
+++ b/프로그래머스/lv2/이하은/괄호 회전하기.md
@@ -1,3 +1,6 @@
+## Deque 
+
+```kotlin
 import java.util.*
 
 /*
@@ -71,3 +74,65 @@ class Solution {
         return flag
     }
 }
+```
+
+## substring 
+
+```kotlin 
+import java.util.*
+
+class Solution {
+    val openParens = listOf('(', '{', '[')
+    val closeParens = listOf(')', '}', ']')
+    
+    fun solution(str: String): Int {
+        var answer = 0
+        var n = str.length
+        var now = str
+        
+        while(n > 0){
+            if(isBalanced(now)) answer++
+            now = now.substring(1, str.length) + now[0]
+            n--
+        }
+        
+        return answer
+    }
+    
+    fun isBalanced(str: String): Boolean {
+        val stack = ArrayDeque<Char>()
+        
+        for(ch in str){
+            // 열린 괄호는 push 
+            if(openParens.contains(ch)){
+                stack.push(ch)
+                continue
+            }
+            
+            // 닫힌 괄호는 쌍이랑 같이 pop 
+            if(!stack.isEmpty()){
+                if(isCoupled(stack.peek(), ch)){
+                    stack.pop()
+                }else{
+                    return false
+                }
+            }else{
+                return false
+            }
+        }
+        
+        return stack.isEmpty()
+    }
+    
+    fun isCoupled(start: Char, end: Char): Boolean {
+        var flag = false
+        for(i in 0..2){
+            if(start == openParens[i] && end == closeParens[i]){
+                flag = true
+                break
+            }
+        }
+        return flag
+    }
+}
+```
