[refactor] 반복문 좀더 간단하게 변경

--- a/프로그래머스/lv1/이하은/3진법 뒤집기.md
+++ b/프로그래머스/lv1/이하은/3진법 뒤집기.md
@@ -10,13 +10,7 @@ class Solution {
         var N = n 
         val temp = mutableListOf<Int>()
         
-        // 몫이 3보다 작을 때까지 반복
-        while(true){
-            if(N < 3){
-                temp.add(N)
-                break
-            }
-            
+        while(N > 0){
             temp.add(N % 3)
             N /= 3
         }
@@ -31,7 +25,6 @@ class Solution {
     }
     
     fun pow(a: Int, b: Int): Int {
-        // a를 b번 곱한다. 
         var result = 1
         for(i in 0 until b){
             result *= a
