--- a/프로그래머스/lv3/이하은/보행자 천국.md
+++ b/프로그래머스/lv3/이하은/보행자 천국.md
@@ -1,3 +1,6 @@
+## bottom-up (반복문)
+
+```java
 /*
 행 m, 열 n 
 오른쪽 또는 아래로만 이동 가능 
@@ -40,3 +43,59 @@ class Solution {
         return dp[m][n][0];
     }
 }
+```
+
+## top-down (dfs 재귀 호출)
+
+```java
+class Solution {
+    int MOD = 20170805;
+    int MAX = 501; 
+    int[][][] dp = new int[MAX][MAX][2];
+    int[] dx = {0, 1};
+    int[] dy = {1, 0};
+    
+    int[][] arr; 
+    int M = 0; 
+    int N = 0; 
+    
+    public int solution(int m, int n, int[][] cityMap) {
+        arr = cityMap;
+        M = m; 
+        N = n; 
+        
+        initMemo();
+        return dfs(0, 0, 0);
+    }
+    
+    int dfs(int x, int y, int dir){
+        if(x == M - 1 && y == N - 1) return 1;
+        if(dp[x][y][dir] != -1) return dp[x][y][dir];
+        
+        int result = 0;
+        for(int i = 0; i < 2; i++){
+            int nx = x + dx[i];
+            int ny = y + dy[i];
+            if(nx < 0 || nx >= M || ny < 0 || ny >= N) continue;
+            
+            // 이전 칸이 2일 때는, 방향이 같은 경우에만 이동 
+            if(arr[x][y] == 0 || (arr[x][y] == 2 && dir == i)){
+                result += dfs(nx, ny, i);
+                result %= MOD;
+            }
+        }
+        
+        return dp[x][y][dir] = result; 
+    }
+    
+    void initMemo(){
+        for(int i = 0; i < M; i++){
+            for(int j = 0; j < N; j++){
+                for(int d = 0; d < 2; d++){
+                    dp[i][j][d] = -1;
+                }
+            }
+        }
+    }
+}
+```
