--- a/프로그래머스/lv3/이하은/보행자 천국.md
+++ b/프로그래머스/lv3/이하은/보행자 천국.md
@@ -70,9 +70,13 @@ class Solution {
     
     int dfs(int x, int y, int dir){
         if(x == M - 1 && y == N - 1) return 1;
+
+        // dp 테이블에 저장된 값이 있으면 그대로 리턴 
         if(dp[x][y][dir] != -1) return dp[x][y][dir];
         
-        int result = 0;
+        // 현재 가지에서 가능한 이동 경로의 수 
+        int sum = 0;
+
         for(int i = 0; i < 2; i++){
             int nx = x + dx[i];
             int ny = y + dy[i];
@@ -80,12 +84,14 @@ class Solution {
             
             // 이전 칸이 2일 때는, 방향이 같은 경우에만 이동 
             if(arr[x][y] == 0 || (arr[x][y] == 2 && dir == i)){
-                result += dfs(nx, ny, i);
-                result %= MOD;
+                sum += dfs(nx, ny, i);
+
+                // int 범위 초과 방지 
+                sum %= MOD;
             }
         }
         
-        return dp[x][y][dir] = result; 
+        return dp[x][y][dir] = sum; // 메모이제이션 
     }
     
     void initMemo(){
