[chore] 코드 일부 수정

--- a/프로그래머스/lv3/이하은/보행자 천국.md
+++ b/프로그래머스/lv3/이하은/보행자 천국.md
@@ -84,10 +84,8 @@ class Solution {
             
             // 이전 칸이 2일 때는, 방향이 같은 경우에만 이동 
             if(arr[x][y] == 0 || (arr[x][y] == 2 && dir == i)){
-                sum += dfs(nx, ny, i);
-
-                // int 범위 초과 방지 
-                sum %= MOD;
+                sum += dfs(nx, ny, i) % MOD; 
+                sum %= MOD; 
             }
         }
         
